# ini-lite

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  README.md  conanfile.txt  ini.cpp
benchmark/: CMakeLists.txt  af-ini-benchmarks.cpp
cmake/: af-ini-config.cmake.in  af-ini.pc.in  version.hpp.in
conan/: CMakeLists.txt  conanfile.txt
include/af/: ini_error.hpp  ini_parse.hpp  ini_string_view.h
src/: Ini.cpp
test/: CMakeLists.txt  ITestIni.cpp  UTestIni.cpp
test/data/: invalid_section1.ini  valid1.ini
test/integration/: af-ini-benchmark-ish.cpp  af-ini-integration-tests.cpp
test/unit/: af-ini-unit-tests.cpp
